<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tropi.dvjl.tropicom.login">


    <include layout="@layout/file_bar"
        android:id="@+id/bar"/>

    <LinearLayout
        android:layout_below="@+id/bar"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/tropicom"/>
        <TextView
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connexion"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restez_connecter_pour_ne_rien_rat_sur_tropicom"/>

        <com.hbb20.CountryCodePicker
            android:id="@+id/pick"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="false"
            app:ccp_defaultLanguage="FRENCH"
            android:fontFamily="sans-serif-condensed"
            app:ccp_showFlag="true"
            app:ccp_autoDetectLanguage="true"
            app:ccp_showFullName="true"
            app:ccp_showPhoneCode="true"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:id="@+id/phone"
                android:inputType="phone"
                android:drawablePadding="5dp"
                android:hint="@string/votre_num_ro_de_t_l_phone"
                android:drawableLeft="@drawable/ic_phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"

            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:id="@+id/passe"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:hint="@string/mot_de_passe"
                android:drawableLeft="@drawable/ic_pax" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:layout_height="wrap_content"
            android:text="@string/se_connecter"
            android:id="@+id/connect"
            android:textColor="@color/blanc"
            android:background="@drawable/bord"/>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vous n'êtes pas encore inscrit ?"/>
            <TextView
                android:layout_weight="1"
                android:text="   S'inscrire"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:textStyle="bold"
                android:id="@+id/ins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_weight="1"
            android:text="Mot de passe oublié ?"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/oubli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
